Performs delete on collection User

--- a/app/index.css
+++ b/app/index.css
@@ -18,3 +18,11 @@ tr:nth-child(even) {
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
+
+body {
+	font-family: Monospace;
+}
+
+.styled-text {
+	font-family: monospace;
+}
